<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_menu_profil"
            android:title="@string/profil" />
        <item
            android:id="@+id/nav_new_class"
            android:icon="@drawable/ic_menu_new_class"
            android:title="@string/new_class" />
        <item
            android:id="@+id/nav_new_note"
            android:icon="@drawable/ic_menu_new_note"
            android:title="@string/new_note" />
        <item
            android:id="@+id/nav_view_classes"
            android:icon="@drawable/ic_menu_view_classes"
            android:title="@string/view_classes" />
        <item
            android:id="@+id/nav_view_by"
            android:icon="@drawable/ic_menu_view_by"
            android:title="@string/view_by" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/help" />
    </group>
</menu>