<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            style="@style/DatePickerTheme"
            android:textColor="@color/colorAccent"
            android:theme="@style/DatePickerTheme" />
        <EditText
            android:id="@+id/edit_note_title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/navy"
            style="@style/DatePickerTheme"
            android:theme="@style/DatePickerTheme" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="5">
        <EditText
            android:id="@+id/edit_note_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginVertical="8dp"
            style="@style/DatePickerTheme"
            android:textColor="@color/colorAccent"
            android:theme="@style/DatePickerTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relation_class"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            style="@style/DatePickerTheme"
            android:textColor="@color/colorAccent"
            android:theme="@style/DatePickerTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/edit_note_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:theme="@style/AppTheme"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/edit_note_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:theme="@style/AppTheme"
            android:text="@string/ok"
            android:layout_marginLeft="32dp"/>
    </LinearLayout>
</LinearLayout>