<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/DatePickerTheme"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/note_title"
            android:textColor="@color/grey"
            android:theme="@style/DatePickerTheme" />

        <TextView
            android:id="@+id/detail_note_title"
            style="@style/DatePickerTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:theme="@style/DatePickerTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="5">
        <TextView
            android:id="@+id/detail_note_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="8dp"
            style="@style/DatePickerTheme"
            android:textColor="@color/colorAccent"
            android:theme="@style/DatePickerTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            style="@style/DatePickerTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/relation_class"
            android:textColor="@color/grey"
            android:theme="@style/DatePickerTheme" />
        <ListView
            android:id="@+id/detail_note_classes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="@style/DatePickerTheme"
            android:textColor="@color/colorAccent"
            android:theme="@style/DatePickerTheme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/detail_note_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:theme="@style/AppTheme"
            android:text="@string/edit"/>
        <Button
            android:id="@+id/detail_note_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:theme="@style/AppTheme"
            android:text="@string/back"
            android:layout_marginLeft="32dp"/>
    </LinearLayout>

</LinearLayout>